[gd_scene load_steps=10 format=3 uid="uid://y23jxrraovvn"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_ott2a"]
[ext_resource type="Texture2D" uid="uid://cdw0xw6uxnyj" path="res://blend_files/aerial_drop.png" id="2_ifm7c"]
[ext_resource type="Script" path="res://Scripts/PlayerBulletShooter.gd" id="3_o3687"]
[ext_resource type="Texture2D" uid="uid://dstgkgb7xccwb" path="res://AssortedArt/Button.png" id="5_6pap4"]
[ext_resource type="Texture2D" uid="uid://hrfss7quckne" path="res://blend_files/ink_bar.png" id="5_airt7"]
[ext_resource type="Script" path="res://Scripts/PlayerBulletDetector.gd" id="5_yx60v"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="7_41dh4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdfkb"]
radius = 17.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rmne"]
size = Vector2(22.9862, 2.59945)

[node name="Player" type="CharacterBody2D"]
z_index = 100
collision_layer = 2
script = ExtResource("1_ott2a")

[node name="BulletShooter" type="Node2D" parent="."]
position = Vector2(0, 8.08092)
script = ExtResource("3_o3687")

[node name="SpriteHolder" type="Node2D" parent="."]
position = Vector2(0, 17)

[node name="Drop" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(0, -17)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_ifm7c")

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("bullet_shooter")]
collision_layer = 0
collision_mask = 76
script = ExtResource("5_yx60v")
invincibility_time = 0.5
bullet_shooter = NodePath("../BulletShooter")
splash_spread = 30.0
splash_count = 5
splash_speed = 350.0

[node name="BulletCollider" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sdfkb")

[node name="LandCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 15.9248)
shape = SubResource("RectangleShape2D_5rmne")

[node name="Button" type="Sprite2D" parent="."]
top_level = true
position = Vector2(212.707, 73.6736)
scale = Vector2(0.460537, 0.345995)
texture = ExtResource("5_6pap4")

[node name="Button2" type="Sprite2D" parent="Button"]
modulate = Color(0, 0, 0, 0.5)
z_index = -10
position = Vector2(10.943, 14.5657)
texture = ExtResource("5_6pap4")

[node name="HealthBar" type="Sprite2D" parent="Button"]
process_mode = 1
position = Vector2(-230.066, -31.2227)
scale = Vector2(0.107337, 0.115609)
texture = ExtResource("5_airt7")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 4320, 540)
script = ExtResource("7_41dh4")

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
